Roundcube Webmail SieveRules
============================

 * rename default skin to classic (c40419bdfe)
 * rcube_ui > rcube_utils (r6091)
 * Update for Roundcube framework
 * Add advanced options for editheader extension to UI
 * Add basic support for editheader extension

Version 1.17 (2012-07-07, rc-0.8)
=================================================
 * Add sieverules_load hook
 * Update after r5781
 * Add inital support for Larry

Version 1.16 (2012-01-21, rc-0.8)
=================================================
 * Update code to use new timezone format (r5707)
 * Respect settings for html editor from core
 * Fix display for radio and checkboxes in notify action
 * Use core function to sanitize input

Version 1.15 (2011-12-04, rc-0.7)
=================================================
 * Fix escaping if lines starting with . in vacation message
 * Add support for virustest extension
 * Add HTML editor option for vacation messages

Version 1.14 (2011-10-03, rc-0.6)
=================================================
 * Add plugin hook sieverules_connect
 * Fix typo, hook name should be sieverules_save
 * Improve plugin hook sieverules_saved
 * Add plugin hook sieverules_saved
 * Improve fileinto :create, now requires mailbox extension

Version 1.13 (2011-08-06, rc-0.6)
=================================================
 * Add button to insert sig into vacation message

Version 1.12 (2011-06-19, rc-0.6)
=================================================
 * Use JQueryUI plugin for dialog box (r4715)

Version 1.11 (2011-05-06, rc-0.6)
=================================================
 * Allow users to enter folder names for fileinto

Version 1.10 (2011-03-12, rc-0.5)
=================================================
 * idn_to_ascii -> rcube_idn_to_ascii (r4484)
 * Fix double request when clicking on tab using Firefox (from r4472)
 * Enable :from and :handle options for vaction

Version 1.9 (2011-01-29, rc-0.5)
=================================================